--- a/tmux.conf
+++ b/tmux.conf
@@ -149,4 +149,5 @@ set -g status-left "#H"
 # status bar
 set -g status-right-length 60
 #set -g status-right "#[fg=blue]#S #I:#P #[fg=yellow]:: %d %b %Y #[fg=green]:: %l:%M %p :: #(date -u | awk '{print $4}')::"
-set -g status-right "#[fg=green]#(~/bin/battery Discharging; ~/bin/battery Charging) #[fg=yellow]%l:%M %p %d %b %Y"
+set -g status-right "#[fg=green]#(/usr/local/Cellar/battery/1.3/bin/battery -t) #[fg=yellow]%l:%M %p %d %b %Y"
+
