added tmux pane resize, swift path

--- a/tmux.conf
+++ b/tmux.conf
@@ -22,10 +22,10 @@ bind l select-pane -R
 #bind -r C-l select-window -t :+
 
 # resize panes using PREFIX H, J, K, L
-#bind H resize-pane -L 5
-#bind J resize-pane -D 5
-#bind K resize-pane -U 5
-#bind L resize-pane -R 5
+bind H resize-pane -L 5
+bind J resize-pane -D 5
+bind K resize-pane -U 5
+bind L resize-pane -R 5
 
 # explicitly disable mouse control
 #setw -g mode-mouse off
@@ -128,7 +128,7 @@ set -g visual-activity on
 # set color for status bar
 set-option -g status-bg colour235 #base02
 set-option -g status-fg yellow #yellow
-set-option -g status-attr dim 
+set-option -g status-attr dim
 
 # set window list colors - red for active and cyan for inactive
 set-window-option -g window-status-fg brightblue #base0
