--- a/tmux.conf
+++ b/tmux.conf
@@ -67,6 +67,7 @@ setw -g pane-base-index 1
 set-option -g status-utf8 on
 
 set-option -g mode-mouse on
+set-option -g mouse on
 set-option -g mouse-select-pane on
 set-option -g mouse-select-window on
 
