updating dtofiles- no zsh

--- a/tmux.conf
+++ b/tmux.conf
@@ -44,12 +44,12 @@ set-window-option -g automatic-rename on
 setw -g mode-keys vi
 
 # setup 'v' to begin selection as in Vim
-bind-key -t vi-copy v begin-selection
-bind-key -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
+# bind-key -t vi-copy v begin-selection
+# bind-key -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
 
 # update default binding of 'Enter' to also use copy-pipe
-unbind -t vi-copy Enter
-bind-key -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
+# unbind -t vi-copy Enter
+# bind-key -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
 
 bind y run 'tmux save-buffer - | reattach-to-user-namespace pbcopy '
 bind C-y run 'tmux save-buffer - | reattach-to-user-namespace pbcopy '
@@ -64,19 +64,19 @@ setw -g pane-base-index 1
 # set-option -g terminal-overrides 'xterm*:smcup@:rmcup@'
 
 # UTF-8
-set-option -g status-utf8 on
+# set-option -g status-utf8 on
 
-set-option -g mode-mouse on
+# set-option -g mode-mouse on
 set-option -g mouse on
-set-option -g mouse-select-pane on
-set-option -g mouse-select-window on
+# set-option -g mouse-select-pane on
+# set-option -g mouse-select-window on
 
 set -g default-terminal "screen-256color"
 
 #statuses
 set-option -g status on
 set-option -g status-interval 2
-set-option -g status-utf8 on
+# set-option -g status-utf8 on
 set-option -g status-justify "centre"
 set-option -g status-left-length 60
 set-option -g status-right-length 90
@@ -84,7 +84,7 @@ set-option -g status-right-length 90
 # for vim consistent keybind settings
 set -g xterm-keys on
 
-set-window-option display-panes-time 1500
+# set-window-option display-panes-time 1500
 
 # Set window notifications
 setw -g monitor-activity on
@@ -117,7 +117,7 @@ set-option -g message-fg brightred #orange
 # Status Bar
 # -----------------------
 set-option -g status on                # turn the status bar on
-set -g status-utf8 on                  # set utf-8 for the status bar
+# set -g status-utf8 on                  # set utf-8 for the status bar
 set -g status-interval 5               # set update frequencey (default 15 seconds)
 set -g status-justify centre           # center window list for clarity
 # set-option -g status-position top    # position the status bar at top of screen
