--- a/tmux.conf
+++ b/tmux.conf
@@ -8,6 +8,7 @@ set -g history-limit 10000
 #bind | split-window -h
 #bind - split-window -v
 
+
 # Make the current window the first window
 #bind T swap-window -t 1
 
@@ -152,3 +153,5 @@ set -g status-right-length 60
 #set -g status-right "#[fg=blue]#S #I:#P #[fg=yellow]:: %d %b %Y #[fg=green]:: %l:%M %p :: #(date -u | awk '{print $4}')::"
 set -g status-right "#[fg=green]#(/usr/local/Cellar/battery/1.3/bin/battery -t) #[fg=yellow]%l:%M %p %d %b %Y"
 
+# restore control - l window clear
+bind -n C-k send-keys -R \; clear-history
