--- a/tmux.conf
+++ b/tmux.conf
@@ -151,7 +151,9 @@ set -g status-left "#H"
 # status bar
 set -g status-right-length 60
 #set -g status-right "#[fg=blue]#S #I:#P #[fg=yellow]:: %d %b %Y #[fg=green]:: %l:%M %p :: #(date -u | awk '{print $4}')::"
-set -g status-right "#[fg=green]#(/usr/local/Cellar/battery/1.3/bin/battery -t) #[fg=yellow]%l:%M %p %d %b %Y"
+
+# battery status uses this homebrew package: https://github.com/Goles/Battery
+set -g status-right "#[fg=green]#(/usr/local/bin/battery -t) #[fg=yellow]%l:%M %p %d %b %Y"
 
 # restore control - l window clear
 bind -n C-k send-keys -R \; clear-history
