fix spark battery

--- a/tmux.conf
+++ b/tmux.conf
@@ -153,7 +153,7 @@ set -g status-right-length 60
 #set -g status-right "#[fg=blue]#S #I:#P #[fg=yellow]:: %d %b %Y #[fg=green]:: %l:%M %p :: #(date -u | awk '{print $4}')::"
 
 # battery status uses this homebrew package: https://github.com/Goles/Battery
-set -g status-right "#[fg=green]#(/usr/local/bin/battery -t) #[fg=yellow]%l:%M %p %d %b %Y"
+set -g status-right "#[fg=green]#(/usr/local/bin/battery -ta) #[fg=yellow]%l:%M %p %d %b %Y"
 
 # restore control - l window clear
 bind -n C-k send-keys -R \; clear-history
