--- a/tmux.conf
+++ b/tmux.conf
@@ -122,6 +122,7 @@ set-option -g status on                # turn the status bar on
 set -g status-interval 5               # set update frequencey (default 15 seconds)
 set -g status-justify centre           # center window list for clarity
 # set-option -g status-position top    # position the status bar at top of screen
+set -g status-position bottom
 
 # visual notification of activity in other windows
 setw -g monitor-activity on
@@ -143,17 +144,23 @@ set-window-option -g window-status-current-bg colour252 #bold
 set-window-option -g window-status-current-attr bright
 
 # show host name and IP address on left side of status bar
-set -g status-left-length 70
+# set -g status-left-length 70
 #set -g status-left "#[fg=green]: #h : #[fg=brightblue]#(curl icanhazip.com) #[fg=yellow]#(ifconfig en0 | grep 'inet ' | awk '{print \"en0 \" $2}') #(ifconfig en1 | grep 'inet ' | awk '{print \"en1 \" $2}') #[fg=red]#(ifconfig tun0 | grep 'inet ' | awk '{print \"vpn \" $2}') "
-set -g status-left "#H"
+# set -g status-left "#H"
 
 # show session name, window & pane number, date and time on right side of
 # status bar
-set -g status-right-length 60
+# set -g status-right-length 60
 #set -g status-right "#[fg=blue]#S #I:#P #[fg=yellow]:: %d %b %Y #[fg=green]:: %l:%M %p :: #(date -u | awk '{print $4}')::"
 
 # battery status uses this homebrew package: https://github.com/Goles/Battery
-set -g status-right "#[fg=green]#(/usr/local/bin/battery -ta) #[fg=yellow]%l:%M %p %d %b %Y"
+# set -g status-right "#[fg=green]#(/usr/local/bin/battery -ta) #[fg=yellow]%l:%M %p %d %b %Y"
+set -g status-left ''
+set -g status-right ''
+
+setw -g window-status-bell-attr bold
+setw -g window-status-bell-fg colour255
+setw -g window-status-bell-bg colour1
 
 # restore control - l window clear
 bind -n C-k send-keys -R \; clear-history
