--- a/tmux.conf
+++ b/tmux.conf
@@ -107,12 +107,13 @@ set-option -sg escape-time 1
 # set some pretty colors
 # ----------------------
 # set pane colors - hilight the active pane
-set-option -g pane-border-fg colour235 #base02
-set-option -g pane-active-border-fg colour240 #base01
+set-option -g pane-border-style fg=colour235 #base02
+
+set-option -g pane-active-border-style fg=colour240 #base01
 
 # colorize messages in the command line
-set-option -g message-bg black #base02
-set-option -g message-fg brightred #orange
+set-option -g message-style bg=black,fg=brightred #base02
+# set-option -g message-fg brightred #orange
 
 # ----------------------
 # Status Bar
@@ -129,19 +130,21 @@ setw -g monitor-activity on
 set -g visual-activity on
 
 # set color for status bar
-set-option -g status-bg colour235 #base02
-set-option -g status-fg yellow #yellow
-set-option -g status-attr dim
+#set-option -g status-bg colour235 #base02
+#set-option -g status-fg yellow #yellow
+#set-option -g status-attr dim
 
 # set window list colors - red for active and cyan for inactive
-set-window-option -g window-status-fg brightblue #base0
-set-window-option -g window-status-bg colour236
-set-window-option -g window-status-attr dim
+set-window-option -g window-status-style bg=colour236,fg=brightblue,dim
 
-set-window-option -g window-status-current-fg colour235
-set-window-option -g window-status-current-bg colour252 #bold
+
+
+
+
+set-window-option -g window-status-current-style bg=colour252,fg=colour235,bright
+
 ##[fg=colour235,bg=colour252,bold]
-set-window-option -g window-status-current-attr bright
+# set-window-option -g window-status-current-attr bright
 
 # show host name and IP address on left side of status bar
 # set -g status-left-length 70
@@ -158,9 +161,8 @@ set-window-option -g window-status-current-attr bright
 set -g status-left ''
 set -g status-right ''
 
-setw -g window-status-bell-attr bold
-setw -g window-status-bell-fg colour255
-setw -g window-status-bell-bg colour1
+setw -g window-status-bell-style bg=colour1,fg=colour255,bold
+
 
 # restore control - l window clear
 bind -n C-k send-keys -R \; clear-history
